// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly 1`] = `
.c0 {
  padding: 0.125rem 0.4375rem;
  font-size: 0.5rem;
  line-height: 1.25;
  font-weight: 600;
  text-transform: uppercase;
  text-align: center;
  border-radius: 6.25rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
}

<span
  className="c0"
>
  Active
</span>
`;

exports[`Badge renders correctly with background color 1`] = `
.c0 {
  padding: 0.125rem 0.4375rem;
  font-size: 0.5rem;
  line-height: 1.25;
  font-weight: 600;
  text-transform: uppercase;
  text-align: center;
  border-radius: 6.25rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  background-color: red;
}

<span
  className="c0"
>
  Red background badge
</span>
`;

exports[`Badge renders correctly with color 1`] = `
.c0 {
  padding: 0.125rem 0.4375rem;
  font-size: 0.5rem;
  line-height: 1.25;
  font-weight: 600;
  text-transform: uppercase;
  text-align: center;
  border-radius: 6.25rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  color: red;
}

<span
  className="c0"
  color="red"
>
  Red badge
</span>
`;
